[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foxnose-sdk"
version = "0.2.0"
description = "Official Python client for FoxNose Management and Flux APIs"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "FoxNose"}]
requires-python = ">=3.9"
keywords = ["foxnose", "sdk", "api", "rag", "ai", "embeddings", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6",
  "cryptography>=42.0.0",
  "typing-extensions>=4.8",
  "eval-type-backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
]

[project.urls]
"Homepage" = "https://foxnose.net"
"Source" = "https://github.com/FoxNoseTech/foxnose-python"
"Documentation" = "https://foxnose-python.readthedocs.io"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]
